changed header logo and browser tab icon

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>The Trading Journal</title>
+	<title>The MarketPal</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="icon" href="img/marketpal-logo.svg">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://kit.fontawesome.com/0c2674f1e9.js" crossorigin="anonymous"></script>
 </head>
@@ -14,7 +15,7 @@
 		<!-- Navigation -->
 		<header>
 			<div class="logo">
-				<img src="img/ttj-transparent.png" alt="The Trading Journal transparent logo">
+				<img src="img/marketpal-logo-text.svg" alt="The MarketPal logo">
 			</div>
 			<nav class="navigation">
 				<ul>
