Finished up the mobile version of the main page
Styled the "Podcast" and "newsletter" sections of the main-container of the front page in mobile version. I changed the colors of the svg icons for the boxes to dark and changed the svg social media icon colors for the footer to white. Changed some fonts around for better and more readable looks. Finished up the footer. Also changed the background color for the website to a lighter gray, among other changes.

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
 		<section class="main-container">
 			<div class="main-box">
 				<h1>Your Research Starts Here</h1>
-				<p>All investors should research stocks.<br>Why not start here?.</p>
+				<p>All investors should research stocks.<br>Why not start here?</p>
 			</div>
-			<div class="podcast">
+			<div class="side-box podcast">
 				<h2>New Podcast Episodes</h2>
 				<i class="fas fa-microphone-alt fa-2x"></i>
 				<br>
 				<a href="#" class="btn">Listen Now</a>
 			</div>
-			<div class="newsletter">
+			<div class="side-box newsletter">
 				<h2>Sign Up for Newsletter</h2>
 				<i class="far fa-newspaper fa-2x"></i>
 				<br>
@@ -52,7 +52,7 @@
 	<section class="media">
 		<img src="img/media-pic.png" alt="Research Photo">
 		<div>
-			<h2>Additional Content</h2>
+			<h2>View additional content from The MarketPal YouTube Channel as well as other content for you to watch.</h2>
 			<a href="#" class="btn">View Content</a>
 		</div>
 	</section>
