Added content to investment-watchlist containers
Added the content that will be going inside the watchlist contianer. Also, did the styling for it for the most part, still having some issues with the <hr> dividers though.

--- a/portfolio.html
+++ b/portfolio.html
@@ -267,9 +267,58 @@
         <section class="watchlists-grid">
             <div class="investment-watchlist">
                 <h2>Investments Watchlist</h2>
+                <div class="watchlist-invest-stock">
+                    <h3>ADBE</h3>
+                    <h4>Adobe, Inc.</h2>
+                        <!-- TradingView Widget BEGIN -->
+                        <div class="tradingview-widget-container">
+                            <div class="tradingview-widget-container__widget"></div>
+                            <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/ADBE/" rel="noopener" target="_blank"><span class="blue-text">ADBE Quotes</span></a> by TradingView</div>
+                            <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-single-quote.js" async>
+                            {
+                            "symbol": "ADBE",
+                            "width": "100%",
+                            "colorTheme": "dark",
+                            "isTransparent": true,
+                            "locale": "en"
+                        }
+                            </script>
+                        </div>
+                        <!-- TradingView Widget END -->
+                </div>
+                <div class="watchlist-invest-stock">
+                </div>
+                <div class="watchlist-invest-stock">
+
+                </div>
             </div>
             <div class="trade-watchlist">
                 <h2>Trades Watchlist</h2>
+                <div class="watchlist-trade-stock">
+                    <h3>TWTR</h3>
+                    <h4>Twitter, Inc.</h4>
+                    <!-- TradingView Widget BEGIN -->
+                    <div class="tradingview-widget-container">
+                        <div class="tradingview-widget-container__widget"></div>
+                        <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/NYSE-TWTR/" rel="noopener" target="_blank"><span class="blue-text">TWTR Quotes</span></a> by TradingView</div>
+                        <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-single-quote.js" async>
+                        {
+                        "symbol": "NYSE:TWTR",
+                        "width": "100%",
+                        "colorTheme": "dark",
+                        "isTransparent": true,
+                        "locale": "en"
+                    }
+                        </script>
+                    </div>
+                    <!-- TradingView Widget END -->
+                </div>
+                <div class="watchlist-trade-stock">
+
+                </div>
+                <div class="watchlist-trade-stock">
+
+                </div>
             </div>
         </section>
     </main>
