Made some design changes to the home page, portfolio page, and about page.
- Changed big, static stock widget on the front page and switched it out for the smaller scrolling stock index widget instead. Makes it look cleaner and nicer
- Changed the background of the widget to black by adding a "background-color" in css for both the widget on the "Home" page and the "Portfolio" page.
- Changed the style of the "About page." Wasn't a big fan of the border that I had around it. I felt like I could have given it a bit more of a minimalist style. So I got rid of the border box around the text and just the page a plain white "background-color."

--- a/about.html
+++ b/about.html
@@ -13,9 +13,9 @@
     <header id="header-bar" class="header-grid">
         <div class="bg-image"></div>
         <div class="header-media">
-         <i class="fab fa-youtube fa-2x"></i>
-         <i class="fab fa-twitter fa-2x"></i>
-         <i class="fab fa-instagram fa-2x"></i>
+            <a href="#" title="Subscribe on YouTube"><i class="fab fa-youtube fa-2x"></i></a>
+            <a href="#" title="Follow on Twitter"><i class="fab fa-twitter fa-2x"></i></a>
+            <a href="#" title="Follow the Instagram"><i class="fab fa-instagram fa-2x"></i></a>
         </div>
         <div class="logo-nav">
             <div id="header-logo" class="header-logo">
@@ -32,7 +32,7 @@
                  </ul>
              </nav>
         </div>
-         <a href="contact.html" class="btn" target='_blank'>Contact</a>
+         <a href="contact.html" class="btn" >Contact</a>
     </header>
 
     <!-- About content -->
@@ -40,7 +40,14 @@
         <h2>About The MarketPal</h2>
         <section class="contact-us">
             <div class="box-wrapper">
-                <p>The MarketPal is a website that gives investors a place to start their stock research. The MarketPal has a public portfolio that can be seen by users and each new addition will have a stock analysis journal to go along with it so users know why that stock was added to the portfolio. On top of that, there will be new research papers every week so that investors can find the stocks they're looking for on the website as well.<br>On the website, users are also allowed to suggest or submit their own research papers on stocks that interest them for a small fee if they would like to support the website. This fee ranges from $5-10 depending wether it's a suggestion or a submission of their own.<br>In addition to these services, there is also a YouTube channel and podcast that will have videos uploaded to it every week. These videos will be on the topic of the stocks in the portfolio, the research papers, and any stocks in the market in general that are worth talking about.</p>
+                <p>
+                    Hi, I’m Anthony, the creator of The MarketPal. This website was meant to help investors and those who want to learn to invest, find a place they can go to in order to start their research, find learning tools, and ideas instead of going all over the internet looking for it.
+                    <br>
+                    That’s not to say that you shouldn’t always find your own sources and do your own research. But it’s always nice to have a place to start, especially if you’re just starting out.
+                </p>
+                <br class="about-section-divider">
+                <h3>Who I Am</h3>
+                <p>My name is Anthony and I’m just someone who enjoys talking all about the stock market. I dedicate a lot of time to it and I get a huge sense of satisfaction and enjoyment about investing, It’s something I’m very passionate about and although I’m not a financial advisor by any means, I’m always learning and improving alongside those who follow what I do. Investing is a very interesting and amazing thing and what isn’t there to love about it.</p>
             </div>
         </section>
     </main>
