--- a/portfolio.html
+++ b/portfolio.html
@@ -59,17 +59,17 @@
                 "title": "EUR/USD"
             },
             {
-                "description": "Gold",
-                "proName": "FX_IDC:XAUUSD"
+                "proName": "BITSTAMP:BTCUSD",
+                "title": "BTC/USD"
             },
             {
-                "description": "Crude Oil",
-                "proName": "TVC:USOIL"
+                "proName": "BITSTAMP:ETHUSD",
+                "title": "ETH/USD"
             }
             ],
             "colorTheme": "dark",
-            "isTransparent": false,
-            "displayMode": "regular",
+            "isTransparent": true,
+            "displayMode": "adaptive",
             "locale": "en"
         }
             </script>
@@ -287,10 +287,82 @@
                         <!-- TradingView Widget END -->
                 </div>
                 <div class="watchlist-invest-stock">
+                    <h3>AAPL</h3>
+                    <h4>Apple, Inc.</h4>
+                    <!-- TradingView Widget BEGIN -->
+                    <div class="tradingview-widget-container">
+                        <div class="tradingview-widget-container__widget"></div>
+                        <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/NASDAQ-AAPL/" rel="noopener" target="_blank"><span class="blue-text">AAPL Quotes</span></a> by TradingView</div>
+                        <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-single-quote.js" async>
+                        {
+                        "symbol": "NASDAQ:AAPL",
+                        "width": "100%",
+                        "colorTheme": "dark",
+                        "isTransparent": true,
+                        "locale": "en"
+                    }
+                        </script>
+                    </div>
+                    <!-- TradingView Widget END -->
                 </div>
                 <div class="watchlist-invest-stock">
-
+                    <h3>NVDA</h3>
+                    <h4>NVIDIA Corporation</h4>
+                    <!-- TradingView Widget BEGIN -->
+                    <div class="tradingview-widget-container">
+                        <div class="tradingview-widget-container__widget"></div>
+                        <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/NVDA/" rel="noopener" target="_blank"><span class="blue-text">NVDA Quotes</span></a> by TradingView</div>
+                        <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-single-quote.js" async>
+                        {
+                        "symbol": "NVDA",
+                        "width": "100%",
+                        "colorTheme": "dark",
+                        "isTransparent": true,
+                        "locale": "en"
+                    }
+                        </script>
+                    </div>
+                    <!-- TradingView Widget END -->
                 </div>
+                <div class="watchlist-invest-stock">
+                    <h3>PYPL</h3>
+                    <h4>PayPal Holdings, Inc.</h4>
+                    <!-- TradingView Widget BEGIN -->
+                    <div class="tradingview-widget-container">
+                        <div class="tradingview-widget-container__widget"></div>
+                        <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/NASDAQ-PYPL/" rel="noopener" target="_blank"><span class="blue-text">PYPL Quotes</span></a> by TradingView</div>
+                        <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-single-quote.js" async>
+                        {
+                        "symbol": "NASDAQ:PYPL",
+                        "width": "100%",
+                        "colorTheme": "dark",
+                        "isTransparent": true,
+                        "locale": "en"
+                    }
+                        </script>
+                    </div>
+                    <!-- TradingView Widget END -->
+                </div>
+                <div class="watchlist-invest-stock">
+                    <h3>NKE</h3>
+                    <h4>NIKE, Inc.</h4>
+                    <!-- TradingView Widget BEGIN -->
+                    <div class="tradingview-widget-container">
+                        <div class="tradingview-widget-container__widget"></div>
+                        <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/NYSE-NKE/" rel="noopener" target="_blank"><span class="blue-text">NKE Quotes</span></a> by TradingView</div>
+                        <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-single-quote.js" async>
+                        {
+                        "symbol": "NYSE:NKE",
+                        "width": "100%",
+                        "colorTheme": "dark",
+                        "isTransparent": true,
+                        "locale": "en"
+                    }
+                        </script>
+                    </div>
+                    <!-- TradingView Widget END -->
+                </div>
+                <!-- Add more stocks to the investments watchlist here -->
             </div>
             <div class="trade-watchlist">
                 <h2>Trades Watchlist</h2>
@@ -313,11 +385,7 @@
                     </div>
                     <!-- TradingView Widget END -->
                 </div>
-                <div class="watchlist-trade-stock">
-
-                </div>
-                <div class="watchlist-trade-stock">
-
+                <!-- Add more stocks to the trades wathclist here -->
                 </div>
             </div>
         </section>
