--- a/submission.html
+++ b/submission.html
@@ -14,9 +14,9 @@
         <header id="header-bar" class="header-grid">
             <div class="bg-image"></div>
             <div class="header-media">
-            <i class="fab fa-youtube fa-2x"></i>
-            <i class="fab fa-twitter fa-2x"></i>
-            <i class="fab fa-instagram fa-2x"></i>
+                <a href="#" title="Subscribe on YouTube"><i class="fab fa-youtube fa-2x"></i></a>
+                <a href="#" title="Follow on Twitter"><i class="fab fa-twitter fa-2x"></i></a>
+                <a href="#" title="Follow the Instagram"><i class="fab fa-instagram fa-2x"></i></a>
             </div>
             <div class="logo-nav">
                 <div id="header-logo" class="header-logo">
@@ -33,7 +33,7 @@
                     </ul>
                 </nav>
             </div>
-            <a href="contact.html" class="btn" target='_blank'>Contact</a>
+            <a href="contact.html" class="btn">Contact</a>
         </header>
 
         <!-- Thank you message and return button -->
