--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
     <header id="header-bar" class="header-grid">
         <div class="bg-image"></div>
         <div class="header-media">
-            <i class="fab fa-youtube fa-2x"></i>
-            <i class="fab fa-twitter fa-2x"></i>
-            <i class="fab fa-instagram fa-2x"></i>
+            <a href="#" title="Subscribe on YouTube"><i class="fab fa-youtube fa-2x"></i></a>
+            <a href="#" title="Follow on Twitter"><i class="fab fa-twitter fa-2x"></i></a>
+            <a href="#" title="Follow the Instagram"><i class="fab fa-instagram fa-2x"></i></a>
         </div>
         <div class="logo-nav">
             <div id="header-logo" class="header-logo">
@@ -105,7 +105,7 @@
             <h2>Contact</h2>
             <hr>
             <p><span>email:</span><br>anthonydiaz917@gmail.com</p>
-            <a href="contact.html" target="_blank" class="btn">Message through website</a>
+            <a href="contact.html" class="btn">Message through website</a>
         </div>
     </footer>
 </body>
