--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <!-- TradingView Widget BEGIN -->
         <div class="tradingview-widget-container">
             <div class="tradingview-widget-container__widget"></div>
-            <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com" rel="noopener" target="_blank"><span class="blue-text">Quotes</span></a> by TradingView</div>
-            <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js" async>
+            <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com" rel="noopener" target="_blank"><span class="blue-text">Ticker Tape</span></a> by TradingView</div>
+            <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
             {
             "symbols": [
             {
@@ -54,20 +54,21 @@
                 "title": "Nasdaq 100"
             },
             {
-                "description": "DOW",
-                "proName": "TVC:DJI"
+                "proName": "FX_IDC:EURUSD",
+                "title": "EUR/USD"
             },
             {
-                "description": "Gold",
-                "proName": "OANDA:XAUUSD"
+                "proName": "BITSTAMP:BTCUSD",
+                "title": "BTC/USD"
             },
             {
-                "description": "Crude Oil",
-                "proName": "TVC:USOIL"
+                "proName": "BITSTAMP:ETHUSD",
+                "title": "ETH/USD"
             }
             ],
             "colorTheme": "dark",
-            "isTransparent": false,
+            "isTransparent": true,
+            "displayMode": "adaptive",
             "locale": "en"
         }
             </script>
