Added new content
- Updated email in the contact section of the footer
- Created a newsletter page and added the newsletter sign up container.
- Added a wrapper to the Portfolio page and changed grid layout from 5 columns to 4.
- Switched out "Contact button on the header for a "Support" button.

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                  </ul>
              </nav>
         </div>
-         <a href="contact.html" class="btn" >Contact</a>
+         <a href="support.html" class="btn" >support</a>
     </header>
 
     <!-- About content -->
@@ -76,7 +76,7 @@
         <div class="contact-info">
             <h2>Contact</h2>
             <hr>
-            <p><span>email:</span><br>anthonydiaz917@gmail.com</p>
+            <p><span>email:</span><br>contact@themarketpal.com</p>
             <a href="contact.html" target="_blank" class="btn">Message through website</a>
         </div>
     </footer>     
