--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </ul>
             </nav>
        </div>
-        <a href="contact.html" class="btn">Contact</a>
+        <a href="support.html" class="btn">Support</a>
     </header>
 
     
@@ -107,7 +107,7 @@
                     <div class="box3">
                         <h2>Sign Up for the Weekly Newsletter</h2>
                         <i class="far fa-newspaper fa-2x"></i>
-                        <a href="#" class="btn">Sign Up</a>
+                        <a href="newsletter.html" class="btn">Sign Up</a>
                     </div>
                 </section>
         </div>
@@ -136,7 +136,7 @@
         <div class="contact-info">
             <h2>Contact</h2>
             <hr>
-            <p><span>email:</span><br>anthonydiaz917@gmail.com</p>
+            <p><span>email:</span><br>contact@themarketpal.com</p>
             <a href="contact.html" class="btn">Message through website</a>
         </div>
     </footer>
