--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
                 </ul>
             </nav>
         </div>
-        <a href="contact.html" class="btn" target='_blank'>Contact</a>
+        <a href="support.html" class="btn" target='_blank'>Support</a>
     </header>
     
     <main>
